# housing-anais-assogane

./: README.md
housing-api/: alembic.ini  docker-compose.yml  main.py  pyproject.toml
housing-api/alembic/: env.py
housing-consumer/: Dockerfile  consumer.py  docker-compose.yml  migration.sql  producer.py  pyproject.toml
housing-model/: Dockerfile  main.py  pyproject.toml  train.py
