[tool.poetry]
name = "housing-api"
version = "0.1.0"
description = "API for housing project"
authors = ["Anais Assogane"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
psycopg2-binary = "^2.9.3"
sqlalchemy = "^1.4.32"
alembic = "^1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
