[tool.poetry]
name = "housing-model"
version = "0.1.0"
description = "ML model for housing project"
authors = ["Anais Assogane"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
numpy = "^1.21.2"
scikit-learn = "^1.0"
fastapi = "^0.88.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
